Added .gitignore. Added the submodules: glfw and glm. Added App, Vulkan and Window classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,24 @@ configure_file(NewEngineConfig.h.in NewEngineConfig.h)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 
+# glm
+add_subdirectory("Common/ThirdParty/glm")
+find_package(GLM REQUIRED)
+include_directories(${PROJECT_NAME} PUBLIC ${GLM_INCLUDE_DIRS})
+
+# vulkan
+find_package(Vulkan REQUIRED)
+link_directories(${Vulkan_INCLUDE_DIR}/../Bin ${Vulkan_INCLUDE_DIR}/../Lib)
+
+# glfw
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+add_subdirectory("Common/ThirdParty/glfw")
+
+
 include_directories(${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR})
-add_executable(${PROJECT_NAME} NewEngine.cpp)
+add_executable(${PROJECT_NAME} NewEngine.cpp NewEngineApp.h NewEngineApp.cpp NewEngineWindow.h NewEngineWindow.cpp NewEngineVulkan.h NewEngineVulkan.cpp)
+
+target_include_directories(${PROJECT_NAME} PUBLIC "${Vulkan_INCLUDE_DIRS}")
+target_link_libraries(${PROJECT_NAME} glfw vulkan-1)
