Renamed NewEngine to TitanEngine. Named after my doggo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
 
 # set the project name and version
-project(NewEngine VERSION 0.1)
+project(TitanEngine VERSION 0.1)
 
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQURIED True)
 
-configure_file(NewEngineConfig.h.in NewEngineConfig.h)
+configure_file(TitanEngineConfig.h.in TitanEngineConfig.h)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
@@ -29,7 +29,7 @@ add_subdirectory("Common/ThirdParty/glfw")
 
 
 include_directories(${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR})
-add_executable(${PROJECT_NAME} NewEngine.cpp NewEngineApp.h NewEngineApp.cpp NewEngineWindow.h NewEngineWindow.cpp NewEngineVulkan.h NewEngineVulkan.cpp Util.h Util.cpp)
+add_executable(${PROJECT_NAME} TitanEngine.cpp TitanEngineApp.h TitanEngineApp.cpp TitanEngineWindow.h TitanEngineWindow.cpp TitanEngineVulkan.h TitanEngineVulkan.cpp Util.h Util.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${Vulkan_INCLUDE_DIRS}")
 target_link_libraries(${PROJECT_NAME} glfw vulkan-1)
