Begining work to support running Vulkan on MacOS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,9 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_subdirectory("Common/ThirdParty/glfw")
 
+include("Platform")
+
+
 include_directories(${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR})
 add_executable(${PROJECT_NAME} 
     TitanEngine.cpp
@@ -41,4 +44,4 @@ add_executable(${PROJECT_NAME}
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${Vulkan_INCLUDE_DIRS}")
-target_link_libraries(${PROJECT_NAME} glfw vulkan-1)
+target_link_libraries(${PROJECT_NAME} glfw vulkan)
