--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,8 +60,8 @@
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
             "args": [],
-            "stopAtEntry": true,
-            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build",
             "environment": [
                 {
                     // add the directory where our target was built to the PATHs
@@ -72,7 +72,7 @@
             ],
             "externalConsole": false,
             "MIMode": "lldb",
-            "preLaunchTask": "C/C++: clang++ build active file"
+            "preLaunchTask": "cmake build active file"
           }
     ]
 }
