--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${command:cmake.launchTargetPath}",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/build",
             "environment": [
                 {
                     // add the directory where our target was built to the PATHs
@@ -20,7 +20,8 @@
                     "value": "$PATH:${command:cmake.launchTargetDirectory}"  
                 }
             ],
-            "console": "externalTerminal"
+            "console": "externalTerminal",
+            "preLaunchTask": "cmake build active file"
         },
         {
             "name": "(gdb) Launch",
@@ -38,7 +39,7 @@
                     "value": "$PATH:${command:cmake.launchTargetDirectory}"  
                 }
             ],
-            "externalConsole": false,
+            "externalConsole": true,
             "MIMode": "gdb",
             "miDebuggerPath": "c:\\MinGW\\bin\\gdb.exe",
             "setupCommands": [
