Put Vulkan behind a cmake flag, so it can be disabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,21 +12,23 @@ configure_file(Config.h.in Config.h)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 
+include("Platform")
+
 # glm
 add_subdirectory("Common/ThirdParty/glm")
 find_package(GLM REQUIRED)
 include_directories(${PROJECT_NAME} PUBLIC ${GLM_INCLUDE_DIRS})
 
 # vulkan
-find_package(Vulkan REQUIRED)
+if(GraphicsAPI MATCHES "Vulkan")
+    find_package(Vulkan REQUIRED)
+endif()
 
 # glfw
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_subdirectory("Common/ThirdParty/glfw")
-
-include("Platform")
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Core")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Graphics")
@@ -41,10 +43,24 @@ add_executable(${PROJECT_NAME}
     TitanEngine.cpp App.cpp
 )
 
-target_link_libraries( ${PROJECT_NAME}
-    PRIVATE
-        glfw
-        Vulkan::Vulkan
-        Titan::Core
-        Titan::Graphics
+set(PrivateLibraries
+    "glfw"
+    "Titan::Core"
+    "Titan::Graphics"
 )
+
+if(GraphicsAPI MATCHES "Vulkan")
+list(APPEND PrivateLibraries
+    "Vulkan::Vulkan"
+)
+endif()
+
+message(STATUS ${PrivateLibraries})
+
+target_link_libraries( ${PROJECT_NAME}
+PRIVATE
+    ${PrivateLibraries}
+)
+
+
+
