--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -2,35 +2,57 @@ cmake_minimum_required(VERSION 3.20)
 
 project("Graphics" LANGUAGES CXX)
 
-file(GLOB SourceFiles LIST_DIRECTORIES FALSE
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+set(SourceFiles
+    "${CMAKE_CURRENT_SOURCE_DIR}/Window.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp"
 )
 
+set(PrivateLibraries
+    "glfw"
+    "Titan::Core"
+)
+
+if(GraphicsAPI MATCHES "Vulkan")
+    list(APPEND SourceFiles
+        "${CMAKE_CURRENT_SOURCE_DIR}/Vulkan.h"
+        "${CMAKE_CURRENT_SOURCE_DIR}/Vulkan.cpp"
+    )
+    list(APPEND PrivateLibraries
+        "Vulkan::Vulkan"
+    )
+elseif(GraphicsAPI MATCHES "D3D12")
+    list(APPEND SourceFiles
+        "${CMAKE_CURRENT_SOURCE_DIR}/Direct3D12.h"
+        "${CMAKE_CURRENT_SOURCE_DIR}/Direct3D12.cpp"
+    )
+endif()
+
+
+
 add_library(${PROJECT_NAME}
-    STATIC 
-        ${SourceFiles}
+STATIC 
+    ${SourceFiles}
 )
 add_library("Titan::${PROJECT_NAME}" ALIAS ${PROJECT_NAME})
 
 target_sources(${PROJECT_NAME}
-    PRIVATE
+PRIVATE
     ${SourceFiles}
 )
 
 set_target_properties(${PROJECT_NAME} 
-    PROPERTIES 
-        LINKER_LANGUAGE CXX 
-        FOLDER "Titan"
+PROPERTIES 
+    LINKER_LANGUAGE CXX 
+    FOLDER "Titan"
 )
 
 include_directories(${Core_SOURCE_DIR})
 
 target_link_libraries( ${PROJECT_NAME}
-    PRIVATE
-        glfw
-        Vulkan::Vulkan
-        Titan::Core
+PRIVATE
+    ${PrivateLibraries}
 )
+
+message(STATUS ${PrivateLibraries})
 
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
